# cpp_playground

./: CMakeLists.txt  README.md  StateMachine.md  main.cpp
include/: cells.h
rust_state_machine/: Cargo.toml
rust_state_machine/src/: async_frame.rs  asynchronous.rs  lib.rs  main.rs  sync.rs
src/: CMakeLists.txt  cells.cpp
tests/: CMakeLists.txt  clarity_example.cpp  state_machine.cpp
